# nnav

./: .gitignore  CLAUDE.md  CODEOWNERS  FEATURES.md  LICENSE  Makefile  README.md  context.md  pyproject.toml
docs/: themes.md
scripts/: demo_traffic.py
src/nnav/: __init__.py  __main__.py  app.py  config.py  constants.py  headless.py  jetstream_app.py  messages.py  nats_client.py  themes.py
src/nnav/core/: __init__.py  filter.py
src/nnav/ui/: __init__.py  jetstream_screens.py  mixins.py  screens.py  styles.py  widgets.py
src/nnav/utils/: __init__.py  clipboard.py  formatting.py  patterns.py
tests/: test_message_flow.py
