[project]
name = "nnav"
version = "0.1.0"
description = "NATS Navigator - TUI for visualizing NATS messages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nats-py>=2.9.0",
    "textual>=0.89.0",
    "click>=8.1.0",
]

[project.scripts]
nnav = "nnav.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nnav"]

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
]
